# Progetto_Laboratorio_Programmazione

./: BitProgressBar.h  CMakeLists.txt  FileLoader.cpp  FileLoader.h  Observer.h  ProgressBar.h  Subject.h  main.cpp  prova1.txt
Progetto_ProgressBar/: Progetto_ProgressBar.pro  Progetto_ProgressBar.pro.user.332c6d3  bitprogressbar.h  fileloader.cpp  fileloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  observer.h  progressbar.h  subject.h
test/: BitProgressBarTest.cpp  CMakeLists.txt  FileLoaderTest.cpp  ProgressBarTest.cpp  runAllTests.cpp
